# chip8

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: args.rs  config.rs  main.rs
src/emulator/: cpu.rs  disasm.rs  mod.rs  opcode.rs
src/emulator/disasm/: mod.rs
