# SPDX-License-Identifier: GPL-3.0-or-later
# Date: 2025-07-04
# Author: Alexander Kuzin <alkuzindev@gmail.com>

# Project package info section.
[package]
name        = "chip8"
version     = "0.0.1"
description = "CHIP-8 interpreted programming language emulator"
authors     = ["Alexander Kuzin <alkuzindev@gmail.com>"]
repository  = "https://github.com/alkuzin/chip8"
license     = "GPL-3"
edition     = "2024"

# Project dependencies section.
[dependencies]
