# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025-present chip8 emulator project and contributors

# Project package info section.
[package]
name        = "chip8"
version     = "0.0.2"
description = "CHIP-8 interpreted programming language emulator"
authors     = ["Alexander Kuzin <alkuzindev@gmail.com>"]
repository  = "https://github.com/alkuzin/chip8"
license     = "GPL-3"
edition     = "2024"

# Project dependencies section.
[dependencies]
